<resources>
    <string name="app_name">GuessingGameApp</string>
    <string name="guessLabel">Guess:</string>
    <string name="settingsButton">Settings</string>
    <string name="statusLabel">Status</string>
    <string name="settingsTitle">Settings</string>
    <string name="min_value_label">Min Value (1): </string>
    <string name="max_value_label">Max Value (10): </string>
    <string name="return_label">Return</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
</resources>
