<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kongwenyao.guessinggameapp.MainActivity">

    <TextView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusLabel"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/guessLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guessLabel"
            android:layout_margin="10dp"
            android:labelFor="@+id/textField"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />


    </LinearLayout>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="settingsButtonHandler"
        android:text="@string/settingsButton"
        android:layout_margin="30dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/min"
        android:layout_margin="10dp"
        android:labelFor="@+id/textField"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/max"
        android:layout_margin="10dp"
        android:labelFor="@+id/textField"
        android:textSize="20sp" />

</LinearLayout>
